src/test/deca/context/invalid/added/wrong_init.deca
// Description:
//    Programme faisant une division par 0.
//
// Resultats:
//    erreur ligne 11 mauvaise initialisation.
//
// Historique:
//    cree le 15/01/2024

{
        String i = 4;
}
